--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_OPENROUTER_API_KEY=
 VITE_apiKey=
 VITE_authDomain=
 VITE_projectId=project1-phc
-VITE_storageBucket=project1-phc.firebasestorage.app
+VITE_storageBucket=
 VITE_messagingSenderId=56873494374
-VITE_appId=1:56873494374:web:beeb16ffed914cd4f48aa7
+VITE_appId=
 VITE_measurementId=
